Query Plan looks correct for the first time